--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
         <!-- Brand -->
-        <a class="navbar-brand" href="#">
+        {# <a class="navbar-brand" href="#">
             Sortir.com
-        </a>
+        </a> #}
         <!-- Toggler button for small screens -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
