--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>
             {% block title %}
-                Sortir.com
+                Sortir
             {% endblock %}
         </title>
         <link rel="icon" href="{{ asset('img/favicon.png') }}">
