--- a/templates/participant/profile.html.twig
+++ b/templates/participant/profile.html.twig
@@ -1,29 +1,61 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Welcome {{ participantForm.pseudo }}{% endblock %}
+{% block title %} Profil - {{ participant.pseudo }} {% endblock %}
 
 {% block body %}
-    <h4>Mon profil</h4>
+    <div class="container py-5">
+        <div class="row">
+            <div class="col-md-4">
+                <!-- Profile Photo -->
+                <div class="text-center">
+                    {% if participant.filename %}
+                        <img src="{{ asset('uploads/images/' ~ participant.filename) }}" alt="Profile Picture" class="img-fluid rounded-circle" style="max-width: 200px; max-height: 200px;">
+                    {% else %}
+                        <img src="https://via.placeholder.com/200" alt="Profile Picture" class="img-fluid rounded-circle">
+                    {% endif %}
+                </div>
+            </div>
 
-    {% if app.flashes('success') %}
-        <div class="alert alert-success">
-            {% for message in app.flashes('success') %}
-                <p>{{ message }}</p>
-            {% endfor %}
+            <div class="col-md-8">
+                <!-- Profile Details -->
+                <h2>{{ participant.pseudo }}</h2>
+                <p class="text-muted">Joined on {{ participant.createdAt|date('d M, Y') }}</p>
+
+                <div class="row mt-4">
+                    <div class="col-sm-6">
+                        <h5>Prenom</h5>
+                        <p>{{ participant.prenom }}</p>
+                    </div>
+                    <div class="col-sm-6">
+                        <h5>Nom</h5>
+                        <p>{{ participant.nom }}</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h5>Email</h5>
+                        <p>{{ participant.email }}</p>
+                    </div>
+                    <div class="col-sm-6">
+                        <h5>Telephone</h5>
+                        <p>{{ participant.telephone }}</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h5>City</h5>
+                        <p>{{ participant.site ? participant.site.nom : 'Inconnu' }}</p>
+                    </div>
+                </div>
+
+                <div class="mt-4">
+                    {% if app.user.id == participant.id or is_granted('ROLE_ADMIN') %}
+                        <a href="{{ path('participant_edit', {id: participant.id}) }}" class="btn btn-primary">Modifier</a>
+                    {% endif %}
+                </div>
+            </div>
         </div>
-    {% endif %}
-
-    {{ form_start(participantForm, {'attr': {'enctype': 'multipart/form-data'}}) }}
-        {{ form_row(participantForm.pseudo) }}
-        {{ form_row(participantForm.prenom) }}
-        {{ form_row(participantForm.nom) }}
-        {{ form_row(participantForm.telephone) }}
-        {{ form_row(participantForm.email) }}
-        {{ form_row(participantForm.password) }}
-        {{ form_row(participantForm.plainPassword) }}
-        {{ form_row(participantForm.site) }}
-        {{ form_row(participantForm.photo) }}
-        <button class="btn btn-sm btn-primary">Enregistrer</button>
-    {{ form_end(participantForm) }}
-
+    </div>
 {% endblock %}
